src/snapshots/pbsql__object_name_replacer__tests__drop_index.snap
---
source: src/object_name_replacer.rs
expression: translate_result
---
Err: "not implemented: Drop::Index"
