src/snapshots/pbsql__object_name_replacer__tests__drop_table.snap
---
source: src/object_name_replacer.rs
expression: translate_result
---
Ok:
  original_query:
    - "drop table \"~/heyy\""
  names_to_replace:
    ? - ~/heyy
    : - my_books
      - tbl
  output_query:
    - DROP TABLE my_books.tbl
  output_ast:
    - Drop:
        object_type: Table
        if_exists: false
        names:
          - - value: my_books
              quote_style: ~
            - value: tbl
              quote_style: ~
        cascade: false
        restrict: false
        purge: false
        temporary: false
